# tb10x-hub

./: .gitignore  CANON_LANGUAGE_GUARDRAILS.md  CNAME  DEPLOYMENT_GUIDE.md  HANDOFF_README.md  README.md  SOCIAL_PROFILE_UPDATES.md  WIN_POSITIONING_PACKAGE.md  index.html  review-summary.md
Campaigns/: README.md
aiva-app/: index.html
aiva-app-test/: tailwind.config.ts
aiva-app_ARCHIVED_INCORRECT/: .env  package-lock.json
bbai-site/: app.js  index.html  styles.css
bbm-site/: app.js  index.html  package-lock.json  package.json  styles.css
bbm-site-luxury/: index.html  styles.css
content/: BLOG_WIN_MANIFESTO.md  (+2 more)
services/fastapi/bizbrain_lite/: .env.example  README.md  pyproject.toml
services/fastapi/bizbrain_lite/app/: __init__.py  main.py
services/fastapi/bizbrain_lite/app/api/: agents.py  artifacts.py  deps.py  handoffs.py  health.py  tasks.py  threads.py
services/fastapi/bizbrain_lite/app/config/: settings.py
services/fastapi/bizbrain_lite/app/models/: agent_status.py  artifact.py  handoff.py  task.py  thread.py
services/fastapi/bizbrain_lite/app/schemas/: agent_status.py  artifact.py  common.py  handoff.py  task.py  thread.py
services/fastapi/bizbrain_lite/app/services/: notion_store.py  redis_store.py  registry_service.py
services/fastapi/bizbrain_lite/bizbrain_lite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/fastapi/bizbrain_lite/docs/: alpha_beta_gamma_interaction.md  api_endpoint_list.md  notion_database_mapping.md  recommended_build_order.md  redis_usage.md
services/fastapi/bizbrain_lite/tests/: test_health.py
(+130 files in other folders)
