[project]
name = "bizbrain-lite"
version = "0.1.0"
description = "Lightweight control plane for TB10X operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "redis>=5.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "notion-client>=2.2.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

